--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h1>Brinda G</h1> <!-- replace with your name or logo -->
+        <h1>Amarnath R</h1> <!-- replace with your name or logo -->
         <p>Web Developer and Designer</p> <!-- optional tagline or introduction -->
     </header>
 
@@ -56,13 +56,13 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Get in Touch</h2>
-        <p>Email: <a href="gbrinda642@gmail.com">gbrinda642@gmail.com</a></p>
-        <p>Phone: 6360412167</p>
+        <p>Email: <a href="amarnathrajashekar03@gmail.com">amarnathrajashekar03@gmail.com</a></p>
+        <p>Phone: 779530681</p>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Brinda G. All rights reserved.</p>
+        <p>&copy; 2024 Amarnath R. All rights reserved.</p>
         <!-- add additional links or information as needed -->
     </footer>
 
